--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.9.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.18.0"
