--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "@stripe/react-stripe-js": "^3.9.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "stripe": "^18.4.0"
   }
 }
