--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^3.9.2",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "stripe": "^18.4.0"
   }
