--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@stripe/react-stripe-js": "^3.9.2"
+    "@stripe/react-stripe-js": "^3.9.2",
+    "multer": "^2.0.2"
   }
 }
