--- a/backend/package.json
+++ b/backend/package.json
@@ -10,5 +10,11 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "stripe": "^18.4.0"
-  }
+  },
+
+  "scripts": {
+  "start": "node server.js",
+  "dev": "nodemon server.js"
+}
+
 }
