--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,10 @@
     "stripe": "^18.4.0"
   },
 
+    "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+
   "scripts": {
   "start": "node server.js",
   "dev": "nodemon server.js"
